--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3,4 +3,18 @@
 
 * {
     transition: all 2s ease;
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(to top, #5DFFFF, #c72a81);
+}
+
+
+::-webkit-scrollbar-track {
+    background: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar{
+    width: 5px;
 }
